# re-flora

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DESIGN_PLAN.md  GOAL.md  LICENSE  LICENSE-ASSETS  Makefile  Makefile.linux  Makefile.macos  Makefile.windows  PLAN.md  PLANs.md  README.md  ROADMAP.md  TODOLIST.md  bootstrap.sh  build.rs  lens_flare.glsl  lens_flare_alternative.glsl  seascape_fast.glsl  seascape_shader_sample.glsl
.claude/: settings.json  settings.local.json
config/: gui.toml
docs/: inspirations.md  references.md
shader/foliage/: color_variation.glsl  flora.vert  flora_lod.vert  grass_band_color.glsl  leaves_shadow.vert  palette.glsl  unpacker.glsl
shader/include/: contree_marching.glsl  contree_node.glsl  dda_scene_marching.glsl  depth_offset.glsl  flora_registry.glsl  instance.glsl  marching_result.glsl  ocean.glsl  ocean_depth.glsl  skylight.glsl  sunlight.glsl  voxel_colors.glsl  voxel_data.glsl  voxel_hash_blue_noise.glsl  voxel_types.glsl  wind.glsl  wind_hash.glsl  wind_volume.glsl
shader/particles/: particle.vert  particle_lod.frag  particle_lod.vert  particle_lod_textured.frag  particle_lod_textured.vert
shader/tracer/: composition.comp  god_ray.comp  lens_flare.comp  lens_flare_downsample.comp  lens_flare_sun_required.comp  lens_flare_sun_visible.comp  player_collider.comp  post_processing.comp  terrain_query.comp  tracer.comp  tracer_shadow.comp  wind_volume.comp  wind_volume_sample.glsl
src/: gui_adjustables.rs  main.rs  wind.rs
src/app/: app_controller.rs  core.rs  environment.rs  gui_config.rs  gui_config_loader.rs  gui_config_model.rs  mod.rs  world_edits.rs  world_ops.rs
src/audio/: audio_clip_cache.rs  mod.rs  spatial_sound_manager.rs  tree_audio_manager.rs  (+1 more)
tools/: bootstrap_fedora.sh  bootstrap_macos.sh  format_all.sh  normalize_audio.py  pyproject.toml
website/: index.html  package-lock.json  package.json  vite.config.ts
(+86 files in other folders)
