[package]
name = "re-flora"
version = "0.2.0"
edition = "2021"

[dependencies]
resource_container_derive = { path = "./resource_container_derive" }
ash = { version = "0.38", default-features = false, features = [
    "debug",
    "linked",
    "std",
] }
winit = { version = "0.30", features = ["rwh_05"] }
chrono = { version = "0.4", features = ["clock"] }
# only enable debug assert for glam during debug builds
glam = { version = "0.32.1", features = ["debug-glam-assert", "bytemuck"] }
uuid = { version = "1.4", features = ["v4"] }
# the last release is from 2019, so we use the git version for support of the latest spirv-reflect
spirv-reflect = { git = "https://github.com/gwihlidal/spirv-reflect-rs.git", rev = "97298067e3b1c9ce05633d78f1183c14a3cc6acc" }

gpu-allocator = "0.28.0"
ash-window = "0.13"
env_logger = "0.11"
comfy-table = "7.2.2"
log = "0.4.29"
time = "0.3.47"
egui = "0.34.1"
thiserror = "2.0.18"
egui-winit = "0.34.1"
shaderc = "0.10.1"
noise = "0.9.0"
fastnoise-lite = "1.1.1"
rand = "0.9.0"
ordered-float = "5.3.0"
once_cell = "1.21.4"
indexmap = "2.13.1"
image = "0.25.10"
anyhow = "1.0.102"
bytemuck = "1.25.0"
petalsonic = "0.3"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
# or use a local development version
# petalsonic = { path = "../petalsonic/petalsonic" }

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.25.0"
objc2-app-kit = { version = "0.3.2", features = ["NSCursor"] }

[build-dependencies]
toml = "0.8"
shaderc = "0.10.1"
spirv-reflect = { git = "https://github.com/gwihlidal/spirv-reflect-rs.git", rev = "97298067e3b1c9ce05633d78f1183c14a3cc6acc" }

[features]
default = []
no_validation_layer = []

[profile.test]
# uncomment this line to use release build for tests
# inherits = "release"

[profile.dev.package.petalsonic]
opt-level = 3
